alterando placeholder manual pelo do HTML

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Border radius previewer</title>
-        <link href="css/style.css" rel="stylesheet"> </link>
+        <link href="_css/style.css" rel="stylesheet"> </link>
     </head> 
     <body>
        <div id="tudo">
@@ -11,15 +11,15 @@
         <h1>Border Radius Previewer</h1>
 
             <p id="copy"> border-radius: 0px;</p>
-            <input type="text" id="pri" class="val" value="top-left" onmouseover="priApag()" onmouseout="priMos()">
-            <input type="text" id="seg" class="val" value="top-right" onmouseover="segApag()" onmouseout="segMos()">
-            <input type="text" id="ter" class="val" value="bottom-right" onmouseover="terApag()" onmouseout="terMos()">
-            <input type="text" id="qua" class="val" value="bottom-left" onmouseover="quaApag()" onmouseout="quaMos()"> <br>
+            <input type="text" id="pri" class="val" placeholder="Top-Left" >
+            <input type="text" id="seg" class="val" placeholder="Top-Right" >
+            <input type="text" id="ter" class="val" placeholder="Bottom-Right" >
+            <input type="text" id="qua" class="val" placeholder="Bottom-Left" > <br>
             <input type="button" id="preview" value="PREVIEW" onclick="ver()">
             </div>
        <div id="ex" >
        </div>   
     </div>
-       <script src="script/script.js"> </script>
+       <script src="_script/script.js"> </script>
     </body>
 </html>  
